# montferrand-agent

./: .env.template  .gitignore  DESIGN.md  Dockerfile  README.md  fly.toml  pyproject.toml
src/montferrand_agent/: agent.py  calendar.py  cli.py  config.py  conversation.py  customer.py  evals.py  models.py  server.py  tenant.py
tests/: conftest.py  test_agent.py  test_calendar.py  test_conversation.py  test_evals.py  test_server.py  test_tenant.py
web/: .gitignore  package-lock.json  package.json
web/src/components/: About.astro  ComingSoon.astro  DemoCta.astro  DemoModal.astro  Footer.astro  GettingStarted.astro  Hero.astro  HowItWorks.astro  Nav.astro  Onboarding.astro  PrixRoi.astro  StickyCta.astro  ValueStrip.astro
web/src/layouts/: Base.astro
web/src/pages/: confidentialite.astro  contact.astro  index.astro
web/src/styles/: global.css
